--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "lint:fix": "eslint --fix public/js",
     "test:jest": "NODE_ENV=development jest",
     "clean": "rimraf dist",
-    "publish:prepare": "bash ./scripts/publish/prepare.sh"
+    "publish:prepare": "bash ./scripts/publish/prepare.sh",
+    "new": "node ./scripts/bin/new.js"
   },
   "keywords": [],
   "author": "",
@@ -35,6 +36,7 @@
     "css-loader": "^0.28.10",
     "eslint-plugin-react": "^7.7.0",
     "extract-text-webpack-plugin": "^3.0.2",
+    "file-save": "^0.2.0",
     "html-webpack-plugin": "^2.30.1",
     "husky": "^0.14.3",
     "jest": "^22.4.2",
@@ -49,11 +51,12 @@
     "style-loader": "^0.20.2",
     "ts-loader": "^3.5.0",
     "typescript": "^2.7.2",
+    "uppercamelcase": "^3.0.0",
     "webpack": "^3.11.0",
     "webpack-merge": "^4.1.2"
   },
   "lint-staged": {
-    "*.js": [
+    "*.{js,ts,tsx,scss}": [
       "npm run format --",
       "npm run lint:fix --",
       "git add"
