--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "uiy",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "",
-  "main": "src",
+  "main": "dist/uiy.js",
   "scripts": {
     "precommit": "lint-staged",
     "build": "NODE_ENV=production webpack --progress -p --config scripts/config/webpack.config.prod.js",
