--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,7 +11,8 @@
   "parser": "babel-eslint",
   "env": {
       "browser": true,
-      "es6": true
+      "es6": true,
+      "jest": true
   },
   "plugins": ["react"],
   "rules": {
