--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "build": "NODE_ENV=production webpack --progress -p --config scripts/config/webpack.config.prod.js",
     "start": "NODE_ENV=development webpack-dev-server --config scripts/config/webpack.config.dev.js",
     "format": "prettier-eslint --write public/**/*.js",
-    "lint": "slint public/**/*.js",
-    "lint:fix": "eslint --fix public/js"
+    "lint": "eslint public/**/*.js",
+    "lint:fix": "eslint --fix public/js",
+    "test": "NODE_ENV=development jest",
+    "jest": "jest"
   },
   "keywords": [],
   "author": "",
@@ -29,6 +31,7 @@
     "extract-text-webpack-plugin": "^3.0.2",
     "html-webpack-plugin": "^2.30.1",
     "husky": "^0.14.3",
+    "jest": "^22.4.2",
     "marked": "^0.3.16",
     "node-sass": "^4.7.2",
     "prettier-eslint-cli": "^4.7.1",
@@ -65,5 +68,8 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "webpack-dev-server": "^2.11.1"
+  },
+  "jest": {
+    "testRegex": "(/jest/.+\\.(js|jsx)$)|_test.jsx?$"
   }
 }
