--- a/.npmignore
+++ b/.npmignore
@@ -1,21 +1,8 @@
-docs
-build
-coverage
-test
-script
-.DS_Store
-*.swp
-npm-debug.log
+.*
 dist
-.vscode
-src
-package-lock.json
-yarn.lock
-.cachetest
-.travis.yml
-.babelrc
-.jest.js
-.stylelintrc
-.eslintrc
-.editorconfig
-.gitignore
+docs
+scripts
+site
+test
+
+tsconfig.json
