--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
   },
   "scripts": {
     "precommit": "lint-staged",
-    "build": "NODE_ENV=production webpack --progress -p --config scripts/config/webpack.config.prod.js",
-    "build:lib": "NODE_ENV=production webpack --progress -p --config scripts/config/webpack.config.lib.js",
-    "start": "NODE_ENV=development webpack-dev-server --config scripts/config/webpack.config.dev.js",
+    "build": "cross-env NODE_ENV=production webpack --progress -p --config scripts/config/webpack.config.prod.js",
+    "build:lib": "cross-env NODE_ENV=production webpack --progress -p --config scripts/config/webpack.config.lib.js",
+    "start": "cross-env NODE_ENV=development webpack-dev-server --config scripts/config/webpack.config.dev.js",
     "format": "prettier-eslint --write public/**/*.js",
     "lint": "eslint public/**/*.js",
     "lint:fix": "eslint --fix public/js",
-    "test:jest": "NODE_ENV=development jest",
+    "test:jest": "cross-env NODE_ENV=development jest",
     "clean": "rimraf dist",
     "publish:prepare": "bash ./scripts/publish/prepare.sh",
     "new": "node ./scripts/bin/new.js"
@@ -33,10 +33,12 @@
     "babel-standalone": "^6.26.0",
     "clean-webpack-plugin": "^0.1.18",
     "codemirror": "^5.35.0",
+    "cross-env": "^5.1.3",
     "css-loader": "^0.28.10",
     "eslint-plugin-react": "^7.7.0",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-save": "^0.2.0",
+    "gh-pages": "^1.1.0",
     "html-webpack-plugin": "^2.30.1",
     "husky": "^0.14.3",
     "jest": "^22.4.2",
