--- a/package.json
+++ b/package.json
@@ -9,16 +9,17 @@
   },
   "scripts": {
     "precommit": "lint-staged",
-    "build": "NODE_ENV=production webpack --progress -p --config scripts/config/webpack.config.prod.js",
-    "build:lib": "NODE_ENV=production webpack --progress -p --config scripts/config/webpack.config.lib.js",
-    "start": "NODE_ENV=development webpack-dev-server --config scripts/config/webpack.config.dev.js",
+    "build": "cross-env NODE_ENV=production webpack --progress -p --config scripts/config/webpack.config.prod.js",
+    "build:lib": "cross-env NODE_ENV=production webpack --progress -p --config scripts/config/webpack.config.lib.js",
+    "start": "cross-env NODE_ENV=development webpack-dev-server --config scripts/config/webpack.config.dev.js",
     "format": "prettier-eslint --write public/**/*.js",
     "lint": "eslint public/**/*.js",
     "lint:fix": "eslint --fix public/js",
-    "test:jest": "NODE_ENV=development jest",
+    "test:jest": "cross-env NODE_ENV=development jest",
     "clean": "rimraf dist",
     "publish:prepare": "bash ./scripts/publish/prepare.sh",
-    "new": "node ./scripts/bin/new.js"
+    "new": "node ./scripts/bin/new.js",
+    "deploy": "gh-pages --dist dist --branch gh-pages"
   },
   "keywords": [],
   "author": "",
@@ -33,10 +34,12 @@
     "babel-standalone": "^6.26.0",
     "clean-webpack-plugin": "^0.1.18",
     "codemirror": "^5.35.0",
+    "cross-env": "^5.1.3",
     "css-loader": "^0.28.10",
     "eslint-plugin-react": "^7.7.0",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-save": "^0.2.0",
+    "gh-pages": "^1.1.0",
     "html-webpack-plugin": "^2.30.1",
     "husky": "^0.14.3",
     "jest": "^22.4.2",
@@ -53,7 +56,13 @@
     "typescript": "^2.7.2",
     "uppercamelcase": "^3.0.0",
     "webpack": "^3.11.0",
-    "webpack-merge": "^4.1.2"
+    "webpack-merge": "^4.1.2",
+    "webpack-dev-server": "^2.11.1",
+    "babel-loader": "^7.1.2",
+    "@babel/types": "^7.0.0-beta.40",
+    "@types/react": "^16.0.38",
+    "@types/react-dom": "^16.0.4",
+    "lint-staged": "^7.0.0"
   },
   "lint-staged": {
     "*.{js,ts,tsx,scss}": [
@@ -67,19 +76,10 @@
     "semi": true
   },
   "dependencies": {
-    "@babel/types": "^7.0.0-beta.40",
-    "@types/react": "^16.0.38",
-    "@types/react-dom": "^16.0.4",
-    "babel-loader": "^7.1.2",
     "classnames": "^2.2.5",
-    "element-react": "^1.4.5",
-    "lint-staged": "^7.0.0",
-    "micro": "^9.1.0",
     "omit.js": "^1.0.0",
     "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "uiw": "^1.7.0",
-    "webpack-dev-server": "^2.11.1"
+    "react-dom": "^16.2.0"
   },
   "peerDependencies": {
     "react": "^16.0.0",
