--- a/package.json
+++ b/package.json
@@ -88,7 +88,8 @@
     "classnames": "^2.2.5",
     "omit.js": "^1.0.0",
     "react": "^16.2.0",
-    "react-dom": "^16.2.0"
+    "react-dom": "^16.2.0",
+    "react-router-dom": "^4.2.2"
   },
   "peerDependencies": {
     "react": "^16.0.0",
